--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 python-dotenv==0.14.0
-flask>=1.1.2
-requests==2.25.1
+flask>=2.1.2
+requests>=2.28.0
 flask-sqlalchemy>=2.5.1
-pyodbc>=4.0.30
-pytz>=2021.1
-apscheduler==3.7.0
+pyodbc>=4.0.32
+pytz>=2022.1
+apscheduler==3.9.1
